[package]
name = "did-key"
version = "0.1.0"
authors = ["Tomislav Markovski <tomislav@trinsic.id>"]
edition = "2018"
license = "Apache-2.0"
description = "Implementation of the did:key method"
homepage = "https://github.com/decentralized-identity/did-key.rs"
repository = "https://github.com/decentralized-identity/did-key.rs"
readme = "README.md"

[lib]
crate-type = [ "lib", "cdylib", "staticlib" ]

[dependencies]
ed25519-dalek = "1.0.1"
x25519-dalek = "1.1.0"
curve25519-dalek = "3.0.0"
bs58 = "0.4.0"
sha2 = "0.9"
getrandom = { version = "0.2", features = ["js"] }
hkdf = "0.11"
arrayref = "0.3"
did_url = "0.1.0"
serde = "1.0"
serde_json = "1.0"
base64 = "0.13"
libsecp256k1 = "0.5.0"
bls = { git = "https://github.com/mikelodder7/bls-signatures" }
bls12_381_plus = "0.4"
# remove after bbs version is updated with latest blake2 and generic-array >= 14
# generic-array = "0.12.4"

[dependencies.p256]
version = "0.9.0"
features = ["ecdsa", "ecdh"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false